--- a/package.json
+++ b/package.json
@@ -23,7 +23,15 @@
   "dependencies": {
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
+    "@nestjs/graphql": "^7.9.1",
+    "@nestjs/mongoose": "^7.2.0",
     "@nestjs/platform-express": "^7.5.1",
+    "@types/mongodb": "^3.6.3",
+    "apollo-server-express": "^2.19.0",
+    "graphql": "^15.4.0",
+    "graphql-tools": "^7.0.2",
+    "mongodb": "^3.6.3",
+    "mongoose": "^5.11.8",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3"
