--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
     "@nestjs/platform-express": "^7.5.1",
     "@types/mongodb": "^3.6.3",
     "apollo-server-express": "^2.19.0",
+    "bcrypt": "^5.0.0",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
     "graphql": "^15.4.0",
     "graphql-tools": "^7.0.2",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.8",
+    "mongoose-unique-validator": "^2.0.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3"
