--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
     "@nestjs/graphql": "^7.9.1",
+    "@nestjs/jwt": "^7.2.0",
     "@nestjs/mongoose": "^7.2.0",
+    "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
     "@types/mongodb": "^3.6.3",
     "apollo-server-express": "^2.19.0",
@@ -36,6 +38,8 @@
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.8",
     "mongoose-unique-validator": "^2.0.3",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3"
